src/v8/CAPI_Reactors.pas


function Reactors_Get_RCurve():PAnsiChar;cdecl;
begin
    Result := DSS_GetAsPAnsiChar(Reactors_Get_RCurve_AnsiString());
end;
//------------------------------------------------------------------------------
FUNCTION Reactors_Get_Parallel():WordBool;cdecl;
var
    pReactor: TReactorObj;
begin
    Result := FALSE;
    if ActiveReactor(pReactor) <> Nil    
    THEN Begin
        Result := pReactor.IsParallel;
    End
end;
//------------------------------------------------------------------------------
FUNCTION Reactors_Get_IsDelta():WordBool;cdecl;
var
    pReactor: TReactorObj;
begin
    Result := FALSE;
    if ActiveReactor(pReactor) <> Nil    
    THEN Begin
        if pReactor.Connection > 0 then Result := TRUE;
    End
end;
//------------------------------------------------------------------------------
FUNCTION Reactors_Get_kV():Double;cdecl;
var
    pReactor: TReactorObj;
begin
    Result := 0.0;
    if ActiveReactor(pReactor) <> Nil 
    THEN with pReactor do Begin
        Result := kvrating;
    End
end;
//------------------------------------------------------------------------------
FUNCTION Reactors_Get_kvar():Double;cdecl;
var
    pReactor: TReactorObj;
begin
    Result := 0.0;
    if ActiveReactor(pReactor) <> Nil
    THEN Begin
        Result := pReactor.kvarRating;
    End
end;
//------------------------------------------------------------------------------
FUNCTION Reactors_Get_LmH():Double;cdecl;
var
    pReactor: TReactorObj;
begin
    Result := 0.0;
    if ActiveReactor(pReactor) <> Nil
    THEN Begin
        Result := pReactor.L * 1000.0;
    End
end;
//------------------------------------------------------------------------------
function Reactors_Get_Phases():Integer;cdecl;
var
    pReactor: TReactorObj;
begin
    Result := 0;
    if ActiveReactor(pReactor) <> Nil
    THEN Begin
        Result := pReactor.Nphases;
    End
end;
//------------------------------------------------------------------------------
FUNCTION Reactors_Get_SpecType():Integer;cdecl;
var
    pReactor: TReactorObj;
begin
    Result := 0;
    if ActiveReactor(pReactor) <> Nil
    THEN Begin
        Result := pReactor.SpecType;
    End
end;
//------------------------------------------------------------------------------
FUNCTION Reactors_Get_R():Double;cdecl;
var
    pReactor: TReactorObj;
begin
    Result := 0.0;
    if ActiveReactor(pReactor) <> Nil
    THEN Begin
        Result := pReactor.R;
    End
end;
//------------------------------------------------------------------------------
FUNCTION Reactors_Get_X():Double;cdecl;
var
    pReactor: TReactorObj;
begin
    Result := 0.0;
    if ActiveReactor(pReactor) <> Nil
    THEN Begin
        Result := pReactor.X;
    End
end;
//------------------------------------------------------------------------------
FUNCTION Reactors_Get_Rp():Double;cdecl;
var
    pReactor: TReactorObj;
begin
    Result := 0.0;
    if ActiveReactor(pReactor) <> Nil
    THEN Begin
        Result := pReactor.Rp;
    End
end;
//------------------------------------------------------------------------------
PROCEDURE Reactors_Set_IsDelta(Value: WordBool);cdecl;
var
    pReactor: TReactorObj;
begin
    if ActiveReactor(pReactor) <> Nil
    THEN Begin
        pReactor.Connection := Integer(Value);
        ReactorPropSideEffects(ReactorProps.conn, pReactor);
    End
end;
//------------------------------------------------------------------------------
PROCEDURE Reactors_Set_Parallel(Value: WordBool);cdecl;
var
    pReactor: TReactorObj;
begin
    if ActiveReactor(pReactor) <> Nil
    THEN Begin
        pReactor.IsParallel := Value;
        ReactorPropSideEffects(ReactorProps.Parallel, pReactor);
    End
end;
//------------------------------------------------------------------------------
procedure Reactors_Set_Bus1(const Value: PAnsiChar);cdecl;
var
    pReactor: TReactorObj;
begin
    if ActiveReactor(pReactor) <> Nil
    THEN Begin
        pReactor.SetBus(1, Value);
        ReactorPropSideEffects(ReactorProps.bus1, pReactor);
    End
end;
//------------------------------------------------------------------------------
procedure Reactors_Set_Bus2(const Value: PAnsiChar);cdecl;
var
    pReactor: TReactorObj;
begin
    if ActiveReactor(pReactor) <> Nil
    THEN Begin
        pReactor.SetBus(2, Value);
        ReactorPropSideEffects(ReactorProps.bus2, pReactor);
    End
end;
//------------------------------------------------------------------------------
procedure Reactors_Set_LCurve(const Value: PAnsiChar);cdecl;
var
    pReactor: TReactorObj;
begin
    if ActiveReactor(pReactor) <> Nil
    THEN Begin
        pReactor.LCurve := Value;
        ReactorPropSideEffects(ReactorProps.LCurve, pReactor);
    End
end;
//------------------------------------------------------------------------------
procedure Reactors_Set_RCurve(const Value: PAnsiChar);cdecl;
var
    pReactor: TReactorObj;
begin
    if ActiveReactor(pReactor) <> Nil
    THEN Begin
        pReactor.RCurve := Value;
        ReactorPropSideEffects(ReactorProps.RCurve, pReactor);
    End
end;
//------------------------------------------------------------------------------
PROCEDURE Reactors_Set_kV(Value: Double);cdecl;
var
    pReactor: TReactorObj;
begin
    if ActiveReactor(pReactor) <> Nil
    THEN Begin
        pReactor.kvrating := Value;
        ReactorPropSideEffects(ReactorProps.kv, pReactor);
    End
end;
//------------------------------------------------------------------------------
PROCEDURE Reactors_Set_kvar(Value: Double);cdecl;
var
    pReactor: TReactorObj;
begin
    if ActiveReactor(pReactor) <> Nil
    THEN Begin
        pReactor.kvarRating := Value;
        ReactorPropSideEffects(ReactorProps.kvar, pReactor);
    End
end;
//------------------------------------------------------------------------------
PROCEDURE Reactors_Set_LmH(Value: Double);cdecl;
var
    pReactor: TReactorObj;
begin
    if ActiveReactor(pReactor) <> Nil
    THEN Begin
        pReactor.L := Value / 1000.0;
        ReactorPropSideEffects(ReactorProps.LmH, pReactor);
    End
end;
//------------------------------------------------------------------------------
PROCEDURE Reactors_Set_Phases(Value: Integer);cdecl;
var
    pReactor: TReactorObj;
begin
    if ActiveReactor(pReactor) <> Nil
    THEN Begin
        if (Value <> pReactor.NPhases) then
        begin
            pReactor.NPhases := Value;
            ReactorPropSideEffects(ReactorProps.phases, pReactor);
        end;
    End
end;
//------------------------------------------------------------------------------
PROCEDURE Reactors_Set_R(Value: Double);cdecl;
var
    pReactor: TReactorObj;
begin
    if ActiveReactor(pReactor) <> Nil
    THEN Begin
        pReactor.R := Value;
        ReactorPropSideEffects(ReactorProps.R, pReactor);
    End
end;
//------------------------------------------------------------------------------
PROCEDURE Reactors_Set_X(Value: Double);cdecl;
var
    pReactor: TReactorObj;
begin
    if ActiveReactor(pReactor) <> Nil
    THEN Begin
        pReactor.X := Value;
        ReactorPropSideEffects(ReactorProps.X, pReactor);
    End
end;
//------------------------------------------------------------------------------
PROCEDURE Reactors_Set_Rp(Value: Double);cdecl;
var
    pReactor: TReactorObj;
begin
    if ActiveReactor(pReactor) <> Nil
    THEN Begin
        pReactor.Rp := Value;
        ReactorPropSideEffects(ReactorProps.Rp, pReactor);
    End
end;
//------------------------------------------------------------------------------
PROCEDURE Reactors_Set_Rmatrix(ValuePtr: PDouble; ValueCount: Integer);cdecl;
VAR
    Value: PDoubleArray;
    k: Integer;
    pReactor: TReactorObj;
begin
    Value := PDoubleArray(ValuePtr);
    if (ActiveReactor(pReactor) <> Nil) and (Sqr(pReactor.Nphases) = ValueCount)
    THEN WITH pReactor DO 
    Begin
        FOR k := 0 to ValueCount DO
        begin
            Rmatrix[k + 1] := ValuePtr[k];
        End;
        ReactorPropSideEffects(ReactorProps.Rmatrix, pReactor);
    End;
end;
//------------------------------------------------------------------------------
PROCEDURE Reactors_Set_Xmatrix(ValuePtr: PDouble; ValueCount: Integer);cdecl;
VAR
    Value: PDoubleArray;
    k: Integer;
    pReactor: TReactorObj;
begin
    Value := PDoubleArray(ValuePtr);
    if (ActiveReactor(pReactor) <> Nil) and (Sqr(pReactor.Nphases) = ValueCount)
    THEN WITH pReactor DO 
    Begin
        FOR k := 0 to ValueCount DO
        begin
            Xmatrix[k + 1] := ValuePtr[k];
        End;
        ReactorPropSideEffects(ReactorProps.Xmatrix, pReactor);
    End;
end;
//------------------------------------------------------------------------------
PROCEDURE Reactors_Get_Rmatrix(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
VAR
    Result: PDoubleArray;
    k:Integer;
    pReactor: TReactorObj;
begin
    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);
    if (ActiveReactor(pReactor) <> Nil) AND (pReactor.Rmatrix <> nil)
    THEN WITH pReactor DO 
    Begin
        Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (Sqr(Nphases) - 1) + 1);
        FOR k := 0 to ResultCount[0] DO
        begin
            ResultPtr[k] := Rmatrix[k + 1];
        End;
    End;
end;
PROCEDURE Reactors_Get_Rmatrix_GR();cdecl;
// Same as Reactors_Get_Rmatrix but uses global result (GR) pointers
begin
   Reactors_Get_Rmatrix(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;

//------------------------------------------------------------------------------
PROCEDURE Reactors_Get_Xmatrix(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
VAR
    Result: PDoubleArray;
    k:Integer;
    pReactor: TReactorObj;
begin
    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);
    if (ActiveReactor(pReactor) <> Nil) AND (pReactor.Xmatrix <> nil)
    THEN WITH pReactor DO 
    Begin
        Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (Sqr(Nphases) - 1) + 1);
        FOR k := 0 to ResultCount[0] DO
        begin
            ResultPtr[k] := Xmatrix[k + 1];
        End;
    End;
end;
PROCEDURE Reactors_Get_Xmatrix_GR();cdecl;
// Same as Reactors_Get_Xmatrix but uses global result (GR) pointers
begin
   Reactors_Get_Xmatrix(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;

//------------------------------------------------------------------------------
PROCEDURE Reactors_Get_Z1(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
VAR
    Result: PDoubleArray;
    pReactor: TReactorObj;
begin
    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);
    if ActiveReactor(pReactor) <> Nil
    THEN WITH pReactor DO 
    Begin
        Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 2);
        Result[0] := Z1.Re;
        Result[1] := Z1.Im;
    End;
end;
PROCEDURE Reactors_Get_Z1_GR();cdecl;
// Same as Reactors_Get_Z1 but uses global result (GR) pointers
begin
   Reactors_Get_Z1(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;

//------------------------------------------------------------------------------
PROCEDURE Reactors_Get_Z2(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
VAR
    Result: PDoubleArray;
    pReactor: TReactorObj;
begin
    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);
    if ActiveReactor(pReactor) <> Nil
    THEN WITH pReactor DO 
    Begin
        Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 2);
        Result[0] := Z2.Re;
        Result[1] := Z2.Im;
    End;
end;
PROCEDURE Reactors_Get_Z2_GR();cdecl;
// Same as Reactors_Get_Z2 but uses global result (GR) pointers
begin
   Reactors_Get_Z2(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;
